<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_lighter"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/spacing_lg">

    <Space android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" />

    <FrameLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/bg_rounded_square_navy">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_app_logo_pin"
            app:tint="@color/teal_light" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/journey_starts_here"
        style="@style/Text.Title"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:gravity="center"
        android:text="@string/privacy_explanation"
        style="@style/Text.Body" />

    <Space android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        style="@style/Button.Primary" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/sign_in"
        style="@style/Button.Secondary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginBottom="@dimen/spacing_sm"
        android:text="@string/privacy_policy"
        style="@style/Text.Small" />

</LinearLayout>