<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_light_blue"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/app_name"
        android:textColor="@color/teal_dark"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/text_heading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:background="@drawable/bg_card_white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/spacing_lg">

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/bg_circle_teal">
            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_directions_car"
                app:tint="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_lg"
            android:text="@string/find_way_faster"
            style="@style/Text.Title"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:gravity="center"
            android:text="@string/find_way_faster_sub"
            style="@style/Text.Body" />
    </LinearLayout>

    <Space android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/btnAllowLocation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_button_primary"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_my_location"
            app:tint="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_sm"
            android:text="@string/allow_location_access"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_body" />
    </LinearLayout>

    <Button
        android:id="@+id/btnManualLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/enter_location_manually"
        style="@style/Button.Secondary" />

    <TextView
        android:id="@+id/tvNotNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginBottom="@dimen/spacing_sm"
        android:text="@string/not_now"
        style="@style/Text.Body" />

</LinearLayout>